--- a/AXIT/style/style.css
+++ b/AXIT/style/style.css
@@ -6,25 +6,113 @@
 
 body {
     font-size: 14px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 header {
-    height: 40px;
+    height: 60px;
     background-color: #000;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
     align-items: center;
-    gap: 20px;
-    padding-right: 30px;
+}
+
+.company-label {
+    font-size: 30px;
+    color: #fff;
+    font-weight: bold;
+}
+
+.company-label-second {
+    color: #ffa500;
+    font-weight: normal;
 }
 
 header a {
     color: #fff;
     text-decoration: none;
+    padding-right: 25px;
+}
+
+header a:last-child {
+    padding-right: 0;
 }
 
 .description {
-    background-image: url('../img/main.png');
-    height: 700px;
+    background-color: #b4b4b4;
+    height: 450px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
+
+.company-label-description {
+    font-size: 45px;
+    font-weight: bold;
+}
+
+.product-description {
+    color: #fff;
+    width: 40%;
+
+}
+
+h1 {
+    text-transform: uppercase;
+    padding-bottom: 25px;
+}
+
+hr {
+    border: 1px solid #fff;
+    width: 75px;
+}
+
+.product-description p {
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.product-description button {
+    height: 45px;
+    width: 125px;
+    background-color: #b4b4b4;
+    color: #fff;
+    border: 1px solid #fff;
+}
+
+.register-form {
+    border: 1px solid #fff;
+    background-color: #fff;
+    height: 300px;
+    width: 300px; 
+}
+
+.register-form p {
+    height: 30px;
+    background-color: #f0f0f0;
+}
+
+.register-form input {
+    border: none;
+    border-bottom: 1px solid #b4b4b4;
+    color: #b4b4b4;
+    padding-top: 30px;
+}
+
+.submit-button {
+    display: block;
+    color:  #fff;
+    background-color: #ffa500;
+    border: none;
+    width: 100%;
+    height: 30px;
+}
+
+
+
+
+
+
+
+
+
