--- a/AXIT/style/style.css
+++ b/AXIT/style/style.css
@@ -18,108 +18,29 @@ FONT SIZE SYSTEM (px)
 /* ------------------------ */
 
 body {
-    font-size: 14px;
-    font-family: 'Open Sans', sans-serif;
+    font-size: 68.5%;
+    font-family: sans-serif;
+    color: #555;
 }
 
-header {
-    height: 60px;
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2.4rem 12.8rem;
     background-color: #000;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
 }
 
-.company-label {
-    font-size: 30px;
-    color: #fff;
-    font-weight: bold;
-}
-
-.company-label-second {
-    color: #ffa500;
-    font-weight: normal;
-}
-
-header a {
-    color: #fff;
+.nav-btn {
+    font-size: 1.2rem;
     text-decoration: none;
-    padding-right: 25px;
-}
-
-header a:last-child {
-    padding-right: 0;
-}
-
-.description {
-    background-color: #b4b4b4;
-    height: 450px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.company-label-description {
-    font-size: 45px;
-    font-weight: bold;
-}
-
-.product-description {
     color: #fff;
-    width: 40%;
-
+    margin-right: 0.8rem;
 }
 
-h1 {
-    text-transform: uppercase;
-    padding-bottom: 25px;
-}
 
-hr {
-    border: 1px solid #fff;
-    width: 75px;
-}
 
-.product-description p {
-    padding-top: 25px;
-    padding-bottom: 25px;
-}
-
-.product-description button {
-    height: 45px;
-    width: 125px;
-    background-color: #b4b4b4;
-    color: #fff;
-    border: 1px solid #fff;
-}
-
-.register-form {
-    border: 1px solid #fff;
-    background-color: #fff;
-    height: 300px;
-    width: 300px; 
-}
-
-.register-form p {
-    height: 30px;
-    background-color: #f0f0f0;
-}
-
-.register-form input {
-    border: none;
-    border-bottom: 1px solid #b4b4b4;
-    color: #b4b4b4;
-    padding-top: 30px;
-}
-
-.submit-button {
-    display: block;
-    color:  #fff;
-    background-color: #ffa500;
-    border: none;
-    width: 100%;
-    height: 30px;
-}
 
 
 
