--- a/Omnifood/styles/style.css
+++ b/Omnifood/styles/style.css
@@ -14,7 +14,12 @@
     LINE HEIGHTS:
     Default: 1   
     Small: 1.05
+    Medium: 1.2
     Paragraph-default: 1.6 
+
+    LETTER SPACING
+    -0.5px
+    0.75px
 
 --- 02 COLOR
 
@@ -58,15 +63,75 @@ body {
     color: #555;
 }
 
+/***************************/
 /* GENERAL COMPONENTS */
+/***************************/
 
-.heading-primary {
+.container {
+    max-width: 120rem;
+    padding: 0 3.2rem;
+    margin: 0 auto;
+}
+
+.grid {
+    display: grid;
+    gap: 9.6rem;
+}
+
+.grid--2-cols {
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--3-cols {
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.heading-primary,
+.heading-secondary {
     font-size: 5.2rem;
-    font-weight: 700;
-    line-height: 1.05;
     color: #333;
     letter-spacing: -0.5px;
+}
+
+.heading-primary {
+    font-weight: 700;
+    line-height: 1.05;
     margin-bottom: 3.2rem;
+}
+
+.heading-secondary {
+    font-size: 4.4rem;
+    line-height: 1.2;
+    margin-bottom: 9.6rem;
+}
+
+.subheading {
+    display: block;
+    font-size: 1.6rem;
+    font-weight: 500;
+    color: #cf711f;
+    text-transform: uppercase;
+    margin-bottom: 1.6rem;
+    letter-spacing: 0.75px;
+}
+
+
+
+/***************************/
+/* HEADER */
+/***************************/
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fdf2e9;
+
+    height: 9.6rem;
+    padding: 0 4.8rem;
+}
+.logo {
+    height: 2.2rem;
 }
 
 .btn:link, .btn:visited {
@@ -106,21 +171,9 @@ body {
     margin-right: 1.6rem !important;
 }
 
-/* HEADER */
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fdf2e9;
-
-    height: 9.6rem;
-    padding: 0 4.8rem;
-}
-.logo {
-    height: 2.2rem;
-}
-
+/***************************/
 /* NAVIGATION */
+/***************************/
 
 .main-nav-list {
     list-style: none;
@@ -158,8 +211,9 @@ body {
     background-color: #cf711f;
 }
 
-
+/***************************/
 /* HERO SECTION */
+/***************************/
 
 .section-hero {
     background-color: #fdf2e9;
@@ -219,4 +273,14 @@ body {
     font-weight: 700;
 }
 
+/***************************/
+/* HOW IT WORKS SECTION */
+/***************************/
 
+.section-how {
+    padding: 9.6rem 0;
+}
+
+.step-img {
+    width: 5 0%;
+}
