--- a/Omnifood/styles/style.css
+++ b/Omnifood/styles/style.css
@@ -1,121 +1,3 @@
-/*
-        
---- 01 TYPOGRAPHY
-
-    FONT SIZE SYSTEM (px):
-    10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-        
-    FONT WEIGHTS:
-    Default: 400
-    Medium: 500
-    Semi-bold: 600
-    Bold: 700
-    
-    LINE HEIGHTS:
-    Default: 1   
-    Small: 1.05
-    Medium: 1.2
-    Paragraph-default: 1.6 
-
-    LETTER SPACING
-    -0.5px
-    0.75px
-
---- 02 COLOR
-
-    PRIMARY: #e67e22
-
-    TINTS: #fdf2e9
-
-    SHADES: #cf711f
-
-    ACCENTS:
-
-    GREYS: #333, #555
-
---- 03 SHADOWS
-
---- 04 BORDER RADIUS
-default: 9px
-
---- 05 WHITESPACES
-
-    SPACING SYSTEM (px):
-    2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-*/
-
-
-/* Global reset */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html {
-    font-size: 62.5%;
-}
-
-body {
-    font-family: "Rubik", sans-serif;
-    line-height: 1;
-    font-weight: 400;
-    color: #555;
-}
-
-/***************************/
-/* GENERAL COMPONENTS */
-/***************************/
-
-.container {
-    max-width: 120rem;
-    padding: 0 3.2rem;
-    margin: 0 auto;
-}
-
-.grid {
-    display: grid;
-    gap: 9.6rem;
-}
-
-.grid--2-cols {
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.grid--3-cols {
-    grid-template-columns: repeat(3, 1fr);
-}
-
-.heading-primary,
-.heading-secondary {
-    font-size: 5.2rem;
-    color: #333;
-    letter-spacing: -0.5px;
-}
-
-.heading-primary {
-    font-weight: 700;
-    line-height: 1.05;
-    margin-bottom: 3.2rem;
-}
-
-.heading-secondary {
-    font-size: 4.4rem;
-    line-height: 1.2;
-    margin-bottom: 9.6rem;
-}
-
-.subheading {
-    display: block;
-    font-size: 1.6rem;
-    font-weight: 500;
-    color: #cf711f;
-    text-transform: uppercase;
-    margin-bottom: 1.6rem;
-    letter-spacing: 0.75px;
-}
-
-
 
 /***************************/
 /* HEADER */
@@ -282,5 +164,49 @@ body {
 }
 
 .step-img {
-    width: 5 0%;
+    width: 35%;
+}
+
+.step-number {
+    font-size: 8.6rem;
+    font-weight: 600;
+    color: #ddd;
+    margin-bottom: 1.2rem;
+}
+
+.step-description {
+    font-size: 1.8rem;
+    line-height: 1.8;
+}
+
+.step-img-box {  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.step-img-box::before,
+.step-img-box::after {
+    content: '';
+    display: block;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.step-img-box::before { 
+    width: 60%;
+    padding-bottom: 60%;
+    background-color: #fdf2e9;
+    z-index: -2;
+}
+
+.step-img-box::after {
+    width: 50%;
+    padding-bottom: 50%;
+    background-color: #fae5d3;
+    z-index: -1;
 }
