--- a/Omnifood/styles/general.css
+++ b/Omnifood/styles/general.css
@@ -37,6 +37,7 @@
 
 --- 04 BORDER RADIUS
     default: 9px
+    medium: 11px
 
 --- 05 WHITESPACES
 
@@ -132,4 +133,6 @@ body {
     letter-spacing: 0.75px;
 }
 
-
+strong {
+    font-weight: 500;
+}
