--- a/Omnifood/styles/general.css
+++ b/Omnifood/styles/general.css
@@ -31,7 +31,7 @@
 
     ACCENTS:
 
-    GREYS: #333, #555
+    GREYS: #333, #555, #6f6f6f
 
 --- 03 SHADOWS
 
@@ -133,6 +133,35 @@ body {
     letter-spacing: 0.75px;
 }
 
+.link:link,
+.link:visited {
+    display: inline-block;
+    color: #e67e22;
+    text-decoration: none;
+    border-bottom: 1px solid currentColor;
+    padding-bottom: 2px;
+
+    transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+    color: #cf711f;
+    border-bottom: 1px solid transparent;
+}
+
 strong {
     font-weight: 500;
+}
+
+.margin-right-sm {
+    margin-right: 1.6rem !important;
+}
+
+.margin-bottom-md {
+    margin-bottom: 4.8rem !important;
+}
+
+.center-text {
+    text-align: center;
 }
