--- a/Omnifood/styles/style.css
+++ b/Omnifood/styles/style.css
@@ -49,10 +49,6 @@
     box-shadow: inset 0 0 0 3px #fff;
 }
 
-.margin-right-sm {
-    margin-right: 1.6rem !important;
-}
-
 /***************************/
 /* NAVIGATION */
 /***************************/
@@ -251,6 +247,12 @@
     box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
     border-radius: 11px;
     overflow: hidden;
+    transition: all 0.5;
+}
+
+.meal:hover {
+    transform: translateY(-1.2rem);
+    box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
 }
 
 .meal-content {
@@ -335,4 +337,69 @@
     width: 3rem;
     height: 3rem;
     color: #e67e22;
+}
+
+.all-recipes {
+    text-align: center;
+    font-size: 1.8rem;
+}
+
+/***************************/
+/* TESTIMONIALS SECTION */
+/***************************/
+
+.section-testimonials {
+    background-color: #fdf2e9;
+    display: grid;
+    grid-template-columns: 55fr 45fr;
+    align-items: center;
+}
+
+.testimonials-container {
+    padding: 9.6rem;
+}
+
+.testimonials {
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+    row-gap: 4.8rem;
+    column-gap: 8rem;
+}
+
+.testimonial-img {
+    width: 6.4rem;
+    border-radius: 50%;
+    margin-bottom: 1.2rem;
+}
+
+.testimonial-text {
+    font-size: 1.8rem;
+    line-height: 1.8;
+    margin-bottom: 1.6rem;
+}
+
+.testimonial-name {
+    font-size: 1.6rem;
+    color: #6f6f6f;
+}
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.6rem;
+    padding: 1.6rem;
+}
+
+.gallery-item {
+    overflow: hidden;
+}
+
+.gallery-item-img {
+    display: block;
+    width: 100%;
+    transition: all 0.4s;
+}
+
+.gallery-item-img:hover {
+    transform: scale(1.1);
 }
