--- a/Omnifood/styles/general.css
+++ b/Omnifood/styles/general.css
@@ -82,7 +82,7 @@ body {
 
 .grid--2-cols {
     grid-template-columns: repeat(2, 1fr);
-    align-items: center;
+    
 }
 
 .grid--3-cols {
@@ -164,4 +164,24 @@ strong {
 
 .center-text {
     text-align: center;
+}
+
+.list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+}
+
+.list-item {
+    font-size: 1.8rem;
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+}
+
+.list-icon {
+    width: 3rem;
+    height: 3rem;
+    color: #e67e22;
 }
