--- a/Omnifood/styles/general.css
+++ b/Omnifood/styles/general.css
@@ -34,6 +34,7 @@
     GREYS: #333, #555, #6f6f6f
 
 --- 03 SHADOWS
+    0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
 
 --- 04 BORDER RADIUS
     default: 9px
@@ -80,6 +81,9 @@ body {
     row-gap: 9.6rem;
 }
 
+.grid:not(:last-child) {
+    margin-bottom: 9.6rem;
+}
 .grid--2-cols {
     grid-template-columns: repeat(2, 1fr);
     
@@ -91,6 +95,10 @@ body {
 
 .grid--4-cols {
     grid-template-columns: repeat(4, 1fr);
+}
+
+.grid--5-cols {
+    grid-template-columns: repeat(5, 1fr);
 }
 
 .grid--center-vertically {
@@ -184,4 +192,62 @@ strong {
     width: 3rem;
     height: 3rem;
     color: #e67e22;
+}
+
+.btn,
+.btn:link,
+.btn:visited {
+    display: inline-block;
+    text-decoration: none;
+    font-size: 2rem;
+    padding: 1.6rem 3.2rem;
+    border-radius: 9px;
+    font-weight: 600;
+    border: none;
+    border-radius: 9px;
+
+    /* animation */
+    transition: all 0.3s;
+}
+
+.btn--full:link,
+.btn--full:visited {
+    background-color: #e67e22;
+    color: #fff;
+}
+
+.btn--full:hover,
+.btn--full:active {
+    background-color: #cf711f;
+    color: #fff;
+}
+
+.btn--outline:link,
+.btn--outline:visited {
+    background-color: #fff;
+    color: #555;
+}
+
+.btn--outline:hover,
+.btn--outline:active {
+    background-color: #fdf2e9;
+    /* Set border inside button */
+    box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn-form { 
+    background-color: #45260a;
+    color: #fdf2e9;
+    align-self: end;
+    padding: 1.2rem;
+}
+
+.btn-form:hover {
+    background-color: #fff;
+    color: #555;
+}
+
+*:focus {
+    outline: none;
+    box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
