--- a/Omnifood/styles/style.css
+++ b/Omnifood/styles/style.css
@@ -16,39 +16,6 @@
     height: 2.2rem;
 }
 
-.btn:link, .btn:visited {
-    display: inline-block;
-    text-decoration: none;
-    font-size: 2rem;
-    padding: 1.6rem 3.2rem;
-    border-radius: 9px;
-    font-weight: 600;
-
-    /* animation */
-    transition: all 0.3s;
-}
-
-.btn--full:link, .btn--full:visited {
-    background-color: #e67e22;
-    color: #fff;
-}
-
-.btn--full:hover, .btn--full:active {
-    background-color: #cf711f;
-    color: #fff;
-}
-
-.btn--outline:link, .btn--outline:visited {
-    background-color: #fff;
-    color: #555;
-}
-
-.btn--outline:hover, .btn--outline:active {
-    background-color: #fdf2e9;
-    /* Set border inside button */
-    box-shadow: inset 0 0 0 3px #fff;
-}
-
 /***************************/
 /* NAVIGATION */
 /***************************/
@@ -392,9 +359,46 @@
     padding: 9.6rem 0;
 }
 
+.pricing-plan {
+    border-radius: 11px;
+    width: 75%;
+}
+
+.pricing-plan--starter {
+    justify-self: end;
+    border: 2px solid #fdf2e9;
+    padding: 4.6rem;
+}
+
+.pricing-plan--complete {
+    background-color: #fdf2e9;
+    padding: 4.8rem;
+    position: relative;
+    overflow: hidden;
+}
+
+.pricing-plan--complete::after {
+    content: "Best value";
+    position: absolute;
+    text-transform: uppercase;
+
+    top: 4%;
+    right: -13%;
+
+    font-size: 1.4rem;
+    font-weight: 700;
+    color: #333;
+    padding: 0.8rem 3.2rem;
+
+    
+
+    background-color: #ffd43b;
+    transform: rotate(45deg);
+}
+
 .plan-header {
-    align-items: center;
     margin-bottom: 4.8rem;
+    text-align: center;
 }
 
 .plan-name {
@@ -427,4 +431,118 @@
 
 .plan-sign-up {
     margin-top: 4.8rem;
+    text-align: center;
+}
+
+.plan-details {
+    font-size: 1.6rem;
+    line-height: 1.6;
+    text-align: center;
+}
+.feature-icon {
+    color: #e67e22;
+    height: 3.2rem;
+    width: 3.2rem;
+    margin-bottom: 3.2rem;
+    background-color: #fdf2e9;
+    padding: 1.6rem;
+    border-radius: 50%;
+}
+
+.feature-title {
+    font-size: 2.4rem;
+    font-weight: 700;
+    color: #333;
+    margin-bottom: 1.6rem;
+}
+
+.feature-text {
+    font-size: 1.8rem;
+    line-height: 1.8;
+}
+
+
+/***************************/
+/*  CTA SECTION */
+/***************************/
+
+.section-cta {
+    padding: 9.6rem 0;
+}
+
+.cta {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    background-color: #e67e22;
+    box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+    border-radius: 11px;
+
+    overflow: hidden;
+}
+
+.cta-text-box {
+    color: #45260a;
+    padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+}
+
+.cta .heading-secondary {
+    color: #45260a;
+    margin-bottom: 3.2rem;
+}
+
+.cta-text {
+    font-size: 1.8rem;
+    line-height: 1.8;
+    margin-bottom: 4.8rem;
+}
+
+.cta-image-box {
+    background-image: linear-gradient(to right bottom, rgba(235, 151, 78, 0.35), rgba(230, 125, 34, 0.35)), url(../img/eating.jpg);
+    background-size: cover;
+    background-position: center;
+    /* border-radius: 11px; */
+}
+
+.cta-form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 3.2rem;
+    row-gap: 2.4rem;
+}
+
+.cta-form label {
+    display: block;
+    font-size: 1.6rem;
+    font-weight: 500;
+    margin-bottom: 1.2rem;
+}
+
+.cta-form input,
+.cta-form select {
+    width: 100%;
+    padding: 1.2rem;
+    font-size: 1.8rem;
+    font-family: inherit;
+    border: none;
+    background-color: #fdf2e9;
+    border-radius: 9px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    color: inherit;
+}
+
+.cta-form input::placeholder {
+    color: #aaa;
+}
+
+.cta *:focus {
+    outline: none;
+    box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
+}
+
+/***************************/
+/*  FOOTER SECTION */
+/***************************/
+
+.footer {
+    padding: 9.6rem 0;
 }
