--- a/AXIT/style/style.css
+++ b/AXIT/style/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .container {
-    max-width: 100rem;
+    width: 110rem;
     margin: 0 auto;
 }
 
@@ -34,119 +34,110 @@ body {
     display: grid;
 }
 
-.grid-template--2-cols {
+.grid--2-cols {
     grid-template-columns: repeat(2, 1fr);
 }
 
+/* ************** */
+/* HEADER SECTION */
+/* ************** */
 
-/* ------------------------ */
-/* HEADER */
-/* ------------------------ */
-
-.header {
-    background-color: #000;
+.section-header {
+    background-color: #000000;
+    font-weight: 600;
+    font-size: 1.4rem;
+    padding: 2.4rem;
 }
 
-.header--content {
-    padding: 2.4rem 0;
+.header-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.nav-btn {
-    font-size: 1.4rem;
+.nav-items {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    gap: 5.2rem;
+}
+
+.nav-item:link,
+.nav-item:visited {
+    color: #ffffff;
     text-decoration: none;
-    color: #fff;
-    margin-right: 4.6rem;
 }
 
-.nav-btn:last-child {
-    margin-right: 0;
+/* ************** */
+/* HERO SECTION */
+/* ************** */
+
+.grid--2-cols-3-to-2 {
+    grid-template-columns: 3fr 2fr;
+    gap: 21.6rem;
 }
 
-
-/* **************************** */
-/*        SECTION 1             */
-/* **************************** */
-
-.first-section {
-    background-color: aquamarine;
-    padding: 6.4rem 0;
+.hero-section {
+    background-color: #555;
+    color: #ffffff;
+    padding: 8.0rem 0;
 }
 
-.company-logo--large {
-    max-width: 175px;
-    height: 60px;
-    
-}
-
-.primary-heading {
-    color: #fff;
-    font-size: 3.4rem;
-}
-
-hr {
-    border: 1px solid #fff;
-    max-width: 7.4rem;
-}
-
-.first-section--description--text {
-    font-size: 1.6rem;
-    margin-bottom: 4.4rem;
-}
-
-.company-logo--large,
-.primary-heading,
-hr {
+.logo {
+    font-size: 6.2rem;
     margin-bottom: 3.2rem;
 }
 
+.first-part {
+    font-weight: 600;
+}
+
+.oranged {
+    color: #fd7e14;
+}
+
+.primary-header {
+    font-size: 3.6rem;
+    font-weight: 400;
+    margin-bottom: 3.2rem;
+}
+
+hr {
+    width: 7.4rem;
+    margin-bottom: 4.8rem;
+}
+
+.hero-description {
+    font-size: 1.6rem;
+    margin-bottom: 4.8rem;
+}
+
 .download-btn {
-    width: 13.5rem;
-    height: 4.2rem;
-    border: 2px solid #fff;
-    color: #fff;
-    background-color: #555;
+    padding: 1.6rem 3.2rem;
+    border: 1px solid #ffffff;
+    background-color: #fd7e14;
+    color: #ffffff;
+    font-size: 1.6rem;
 }
 
-.sign-up {
-    max-width: 36rem;
-}
-
-.user-data--input {
-    display: block;
-    border: none;
-    border-bottom: 1px solid #555;
-}
-
-.user-data--input::placeholder {
-    padding-left: 15px;
-}
-
-.sign-up--heading {
-    background-color: #999;
-    color: #333;
+.sign-up-header {
+    font-size: 2.0rem;
+    font-weight: 600;
+    padding: 1.6rem 4.8rem;
     text-align: center;
-    font-size: 2rem;
-    font-weight: 700;
-    line-height: 1.8;
+    color: #333;
+    background-color: #d8d8d8;
 }
 
-.oranged-text {
-    color: #ffa500;
+.sign-up-form {
+    background-color: #ffffff;
 }
 
-.input-area {
-    padding: 3rem 5rem;
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
+.sign-up-item {
+    display: block;
+     width: 70%;
+     margin: 0 auto;
 }
-
-
-
 
 
 
